--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -61,12 +61,12 @@
         padding-right: 5px;
     }
 
-    & .onright {
+    & .right {
         font-size: 0.75em;
         font-weight: bold;
     }
 
-    & .onright .icon, & small .icon {
+    & .right .icon, & small .icon {
         height: 13px !important;
         width: 13px !important;
         margin-right: 1px !important;
