--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -23,12 +23,10 @@
 .scroll.horizontal  > *  > * {
   float: left;
 }
-.left,
-.onleft {
+.left {
   float: left;
 }
-.right,
-.onright {
+.right {
   float: right;
 }
 .hidden {
