--- a/src/stylesheets/Lungo.theme.scaffold.less
+++ b/src/stylesheets/Lungo.theme.scaffold.less
@@ -58,19 +58,24 @@ article {
 
 /* @group <nav> */
 header nav {
-    & a {
-        color: @white;
-    }
+    & a { color: @white; }
 
     &:not(.plain) {
         & a {
             .box-shadow(~"1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2)");
             &.accept { background: rgba(0, 255, 0, 0.4); }
             &.cancel { background: rgba(255, 0, 0, 0.4); }
-        }
-        &.right a { .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)"); }
 
-        & a:active { .box-shadow(~"inset 1px 0 1px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 0 42px rgba(0,0,0,0.5)"); }
+            &:active {
+                &.accept { background: rgba(0, 255, 0, 0.2); }
+                &.cancel { background: rgba(255, 0, 0, 0.2); }
+                &:not(.accept):not(.cancel) { background: rgba(0,0,0,0.25); }
+            }
+        }
+
+        &.right a {
+            .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)");
+        }
     }
 
     &.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
