Changes on stylesheets

--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -13,7 +13,8 @@
 article {
     //position: absolute;
     position: fixed;
-    width: 100% !important;
+    // width: 100% !important;
+    width: inherit;
     height: auto;
     top: 0;
     bottom: 0;
