--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -89,6 +89,10 @@ header {
         font-size: 15px;
         font-weight: bold;
 
+        & img {
+            height: 24px;
+        }
+
         &.centered {
             position: absolute;
             left: 0px;
