--- a/src/stylesheets/Lungo.widgets.colour.less
+++ b/src/stylesheets/Lungo.widgets.colour.less
@@ -12,8 +12,8 @@
 
 a.grey, .grey{background-color: @grey;}
 a.grey:active, a.grey.active{background-color: @grey-active;}
-a.black, .grey{background-color: @black;}
-a.black:active, a.black.active{background-color: @black-active;}
+a.dark-grey, .dark-grey{background-color: @black;}
+a.dark-grey:active, a.dark-grey.active{background-color: @black-active;}
 a.red, .red{background-color: @red;}
 a.red:active, a.red.active{background-color: @red-active;}
 a.lightgreen, .lightgreen{background-color: @lightgreen;}
@@ -40,7 +40,7 @@ a.facebook, .facebook:not(span){background-color: @facebook;}
 a.facebook:active, a.facebook.active{background-color: @facebook-active;}
 
 li.grey{ box-shadow: inset 3px 0px 0px @grey;}
-li.black{ box-shadow: inset 3px 0px 0px @black;}
+li.dark-grey{ box-shadow: inset 3px 0px 0px @black;}
 li.red{ box-shadow: inset 3px 0px 0px @red;}
 li.lightgreen{ box-shadow: inset 3px 0px 0px @lightgreen;}
 li.green{ box-shadow: inset 3px 0px 0px @green;}
