--- a/src/stylesheets/css/Lungo.layout.article.css
+++ b/src/stylesheets/css/Lungo.layout.article.css
@@ -10,7 +10,7 @@
 /* COLORS */
 article {
   position: fixed;
-  width: 100% !important;
+  width: inherit;
   height: auto;
   top: 0;
   bottom: 0;
