Minimal chantes on stylesheets

--- a/src/stylesheets/css/Lungo.theme.scaffold.css
+++ b/src/stylesheets/css/Lungo.theme.scaffold.css
@@ -227,7 +227,7 @@ section.aside.right {
   background: #cccccc;
   border-bottom: none;
 }
-.list .anchor.contrast {
+.list .contrast {
   background: #333333;
   color: #cccccc;
 }
