Rename Global Namespace LUNGO to Lungo

--- a/src/stylesheets/Lungo.widgets.loading.less
+++ b/src/stylesheets/Lungo.widgets.loading.less
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Widgets
+ * @namespace Lungo.Widgets
  * @class Loading
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
