--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Layout
+ * @namespace Lungo.Layout
  * @class Aside
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
