--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO
+ * @namespace Lungo
  * @class Layout
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
