--- a/src/stylesheets/Lungo.widgets.colour.less
+++ b/src/stylesheets/Lungo.widgets.colour.less
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Widgets
+ * @namespace Lungo.Widgets
  * @class Colour
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
