--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO
+ * @namespace Lungo
  * @class Layout
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
