--- a/src/stylesheets/css/Lungo.layout.nav.css
+++ b/src/stylesheets/css/Lungo.layout.nav.css
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Layout
+ * @namespace Lungo.Layout
  * @class Nav
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
