--- a/src/stylesheets/css/Lungo.theme.scaffold.css
+++ b/src/stylesheets/css/Lungo.theme.scaffold.css
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Theme
+ * @namespace Lungo.Theme
  * @class Default
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
