--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO
+ * @namespace Lungo
  * @class Widgets
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
