--- a/src/stylesheets/css/Lungo.widgets.form.css
+++ b/src/stylesheets/css/Lungo.widgets.form.css
@@ -1,7 +1,7 @@
 /**
  * Stylesheet
  *
- * @namespace LUNGO.Widgets
+ * @namespace Lungo.Widgets
  * @class Form
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
