--- a/src/stylesheets/lungo.widgets.notification.less
+++ b/src/stylesheets/lungo.widgets.notification.less
@@ -1,6 +1,6 @@
 @import "mixins.less";
 
-@growl_opacity: rgba(0,0,0,0.5);
+@notification_opacity: rgba(0,0,0,0.5);
 @defaultTrasition : @easeOutSine;
 @keyframe: 300ms;
 
@@ -14,7 +14,7 @@
 
 @font_color: #fff;
 
-.growl {
+.notification {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -25,7 +25,7 @@
     display: none;
 
     &.modal {
-        // background-color: @growl_opacity;
+        // background-color: @notification_opacity;
     }
 
     & .window {
@@ -157,11 +157,11 @@
     }
 }
 
-.growl .window.working span{
-    -webkit-animation: growl-working 1s infinite;
+.notification .window.working span{
+    -webkit-animation: notification-working 1s infinite;
 }
 
-@-webkit-keyframes growl-working {
+@-webkit-keyframes notification-working {
     0% {opacity: 1;}
     50% {opacity: 0;}
     100% {opacity: 1;}
