--- a/src/stylesheets/Lungo.widgets.loading.less
+++ b/src/stylesheets/Lungo.widgets.loading.less
@@ -79,9 +79,9 @@
     }
 }
 
-section.current .loading, .growl .loading {
-    -webkit-animation:  rotatingLoader .5s  infinite  linear;
-    -moz-animation:  rotatingLoader .5s  infinite  linear;
+section.current .loading, .notification .loading {
+    -webkit-animation:  rotatingLoader .6s  infinite linear;
+    -moz-animation:  rotatingLoader .6s  infinite linear;
 }
 
 @-webkit-keyframes rotatingLoader{
