--- a/src/stylesheets/css/lungo.widgets.notification.css
+++ b/src/stylesheets/css/lungo.widgets.notification.css
@@ -1,3 +1,5 @@
+/* DIMENSIONS */
+/* COLORS */
 .notification {
   position: absolute;
   width: 100%;
@@ -8,9 +10,17 @@
   color: #ffffff;
   display: none;
 }
+.notification.modal {
+  background-color: rgba(0, 0, 0, 0.3);
+}
 .notification .window {
   position: relative;
   opacity: 0;
+  -webkit-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
   -webkit-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
   -moz-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
   -ms-transition: all 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
@@ -34,6 +44,17 @@
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  border-radius: 1px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-transform: scale(0.85);
+  -moz-transform: scale(0.85);
+  -ms-transform: scale(0.85);
+  -o-transform: scale(0.85);
+  transform: scale(0.85);
   -webkit-transform: scale(0.85);
   -moz-transform: scale(0.85);
   -ms-transform: scale(0.85);
@@ -46,12 +67,18 @@
   -ms-transform: translate3d(0, 0%, 0);
   -o-transform: translate3d(0, 0%, 0);
   transform: translate3d(0, 0%, 0);
+  -webkit-transform: translate3d(0, 0%, 0);
+  -moz-transform: translate3d(0, 0%, 0);
+  -ms-transform: translate3d(0, 0%, 0);
+  -o-transform: translate3d(0, 0%, 0);
+  transform: translate3d(0, 0%, 0);
 }
 .notification .window:not(.special) .icon {
   display: block;
   font-size: 5.0em;
 }
 .notification .window:not(.special) .icon.loading {
+  margin-top: 24px;
   margin-bottom: 24px;
 }
 .notification .window:not(.special) strong {
@@ -65,9 +92,19 @@
   -ms-transform: translate3d(0, -150%, 0);
   -o-transform: translate3d(0, -150%, 0);
   transform: translate3d(0, -150%, 0);
+  -webkit-transform: translate3d(0, -150%, 0);
+  -moz-transform: translate3d(0, -150%, 0);
+  -ms-transform: translate3d(0, -150%, 0);
+  -o-transform: translate3d(0, -150%, 0);
+  transform: translate3d(0, -150%, 0);
 }
 .notification .window.confirm.show,
 .notification .window.notify.show {
+  -webkit-transform: translate3d(0, 0%, 0);
+  -moz-transform: translate3d(0, 0%, 0);
+  -ms-transform: translate3d(0, 0%, 0);
+  -o-transform: translate3d(0, 0%, 0);
+  transform: translate3d(0, 0%, 0);
   -webkit-transform: translate3d(0, 0%, 0);
   -moz-transform: translate3d(0, 0%, 0);
   -ms-transform: translate3d(0, 0%, 0);
@@ -88,13 +125,16 @@
   opacity: 1;
   padding: 10px 12px;
   top: 0;
-  top: 43px;
+  top: 42px;
   background: #333;
 }
 .notification .window.confirm hr {
   margin: 10px 0;
   height: 1px;
   background: rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
@@ -112,11 +152,9 @@
   top: 0;
   color: #555555;
   text-shadow: 0 1px 0px #ffffff;
-  background-image: -webkit-linear-gradient(top , #e8e8e8 0% , #f6f6f6 50%);
-  background-image: -moz-linear-gradient(top , #e8e8e8 0% , #f6f6f6 50%);
-  background-image: -ms-linear-gradient(top , #e8e8e8 0% , #f6f6f6 50%);
-  background-image: -o-linear-gradient(top , #e8e8e8 0% , #f6f6f6 50%);
-  background-image: linear-gradient(top , #e8e8e8 0% , #f6f6f6 50%);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
@@ -128,25 +166,40 @@
   text-shadow: 0 1px 0px rgba(0, 0, 0, 0.1);
 }
 .notification .window.notify.error {
-  background-image: -webkit-linear-gradient(top , #ff4444 0% , #cc0000 50%);
-  background-image: -moz-linear-gradient(top , #ff4444 0% , #cc0000 50%);
-  background-image: -ms-linear-gradient(top , #ff4444 0% , #cc0000 50%);
-  background-image: -o-linear-gradient(top , #ff4444 0% , #cc0000 50%);
-  background-image: linear-gradient(top , #ff4444 0% , #cc0000 50%);
+  background-image: -webkit-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -moz-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -ms-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -o-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -webkit-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -moz-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -ms-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: -o-linear-gradient(top , #e33100 0% , #c5280f 85%);
+  background-image: linear-gradient(top , #e33100 0% , #c5280f 85%);
 }
 .notification .window.notify.alert {
-  background-image: -webkit-linear-gradient(top , #ffbb33 0% , #ff8800 50%);
-  background-image: -moz-linear-gradient(top , #ffbb33 0% , #ff8800 50%);
-  background-image: -ms-linear-gradient(top , #ffbb33 0% , #ff8800 50%);
-  background-image: -o-linear-gradient(top , #ffbb33 0% , #ff8800 50%);
-  background-image: linear-gradient(top , #ffbb33 0% , #ff8800 50%);
+  background-image: -webkit-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -moz-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -ms-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -o-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -webkit-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -moz-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -ms-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: -o-linear-gradient(top , #ffb515 0% , #dfa020 85%);
+  background-image: linear-gradient(top , #ffb515 0% , #dfa020 85%);
 }
 .notification .window.notify.success {
-  background-image: -webkit-linear-gradient(top , #99cc00 0% , #669900 50%);
-  background-image: -moz-linear-gradient(top , #99cc00 0% , #669900 50%);
-  background-image: -ms-linear-gradient(top , #99cc00 0% , #669900 50%);
-  background-image: -o-linear-gradient(top , #99cc00 0% , #669900 50%);
-  background-image: linear-gradient(top , #99cc00 0% , #669900 50%);
+  background-image: -webkit-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -moz-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -ms-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -o-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -webkit-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -moz-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -ms-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: -o-linear-gradient(top , #009600 0% , #00770e 85%);
+  background-image: linear-gradient(top , #009600 0% , #00770e 85%);
 }
 .notification .window.url {
   left: 0%;
@@ -160,12 +213,17 @@
   -ms-transform: translate3d(0, 75%, 0);
   -o-transform: translate3d(0, 75%, 0);
   transform: translate3d(0, 75%, 0);
+  -webkit-transform: translate3d(0, 75%, 0);
+  -moz-transform: translate3d(0, 75%, 0);
+  -ms-transform: translate3d(0, 75%, 0);
+  -o-transform: translate3d(0, 75%, 0);
+  transform: translate3d(0, 75%, 0);
 }
 .notification .window.url .close {
   position: absolute;
   top: -14px;
   right: -14px;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
   font-weight: normal;
   width: 24px;
