--- a/src/stylesheets/Lungo.widgets.icon.brand.less
+++ b/src/stylesheets/Lungo.widgets.icon.brand.less
@@ -10,40 +10,43 @@
     font-weight: normal !important;
 }
 
-.icon.brand.google-plus:before { content: "\0021"; }
-.icon.brand.google-plus-2:before { content: "\0026";}
-.icon.brand.facebook:before { content: "\0022";}
+.icon.brand.google-plus:before { content: "\0026";}
+    .icon.brand.google-plus-2:before { content: "\0021"; }
+.icon.brand.facebook:before { content: "\0025";}
+    .icon.brand.facebook-2:before { content: "\0022";}
+
 .icon.brand.twitter:before { content: "\0023";}
-.icon.brand.twitter-2:before { content: "\0024";}
-.icon.brand.facebook-2:before { content: "\0025";}
-.icon.brand.feed:before { content: "\0027";}
-.icon.brand.feed-2:before { content: "\0028";}
+    .icon.brand.twitter-2:before { content: "\0024";}
+.icon.brand.feed:before { content: "\0028";}
+    .icon.brand.feed-2:before { content: "\0027";}
+
 .icon.brand.vimeo:before { content: "\0029";}
-.icon.brand.vimeo-2:before { content: "\002a";}
+    .icon.brand.vimeo-2:before { content: "\002a";}
 .icon.brand.flickr:before { content: "\002b";}
-.icon.brand.flickr-2:before { content: "\002c";}
+    .icon.brand.flickr-2:before { content: "\002c";}
 .icon.brand.dribbble:before { content: "\002d";}
-.icon.brand.dribbble-2:before { content: "\002e";}
+    .icon.brand.dribbble-2:before { content: "\002e";}
 .icon.brand.forrst:before { content: "\002f";}
 .icon.brand.deviantart:before { content: "\0030";}
-.icon.brand.deviantart-2:before { content: "\0031";}
-.icon.brand.github:before { content: "\0032";}
-.icon.brand.github-2:before { content: "\0033";}
-.icon.brand.git:before { content: "\0034";}
-.icon.brand.github-3:before { content: "\0035";}
+    .icon.brand.deviantart-2:before { content: "\0031";}
+.icon.brand.git:before { content: "\0032";}
+    .icon.brand.git-2:before { content: "\0033";}
+.icon.brand.github:before { content: "\0044";}
+    .icon.brand.github-2:before { content: "\0045"; }
+.icon.brand.branch:before { content: "\0035";}
+.icon.brand.fork:before { content: "\0034";}
 .icon.brand.wordpress:before { content: "\0036";}
-.icon.brand.wordpress-2:before { content: "\0037";}
+    .icon.brand.wordpress-2:before { content: "\0037";}
 .icon.brand.apple:before { content: "\0038";}
 .icon.brand.android:before { content: "\0039";}
 .icon.brand.windows:before { content: "\003a";}
 .icon.brand.skype:before { content: "\003b";}
 .icon.brand.linkedin:before { content: "\003c";}
 .icon.brand.html5:before { content: "\003d";}
-.icon.brand.html5-2:before { content: "\003e";}
+    .icon.brand.html5-2:before { content: "\003e";}
 .icon.brand.css3:before { content: "\003f";}
 .icon.brand.chrome:before { content: "\0040";}
 .icon.brand.firefox:before { content: "\0041";}
 .icon.brand.IE:before { content: "\0042";}
 .icon.brand.opera:before { content: "\0043";}
-.icon.brand.github-4:before { content: "\0044";}
-.icon.brand.github-5:before { content: "\0045"; }
+
