--- a/src/stylesheets/Lungo.widgets.icon.less
+++ b/src/stylesheets/Lungo.widgets.icon.less
@@ -31,7 +31,7 @@
 .icon.calendar:before {content: "\0036";}
 .icon.mobile:before {content: "\0037";}
 .icon.inbox:before {content: "\0038";}
-.icon.inbox-full:before {content: "\0039";}
+    .icon.inbox-full:before {content: "\0039";}
 .icon.user:before {content: "\003a";}
 .icon.users:before {content: "\003b";}
 .icon.vcard:before {content: "\003c";}
@@ -41,21 +41,21 @@
 .icon.pie:before {content: "\0041";}
 .icon.bars:before {content: "\0042";}
 .icon.remove:before {content: "\0043";}
-.icon.grid-view:before {content: "\0044";}
+.icon.grid:before {content: "\0044";}
 .icon.menu:before {content: "\0045";}
 .icon.cloud:before {content: "\0047";}
 .icon.upload:before {content: "\0048";}
-.icon.star:before {content: "\004a";}
-.icon.star-ghost:before {content: "\004b";}
+.icon.star:before {content: "\004b";}
+    .icon.star-full:before {content: "\004a";}
 .icon.heart:before {content: "\0049";}
-.icon.heart-ghost:before {content: "\004c";}
+    .icon.heart-full:before {content: "\004c";}
 .icon.thumbs-up:before {content: "\004d";}
 .icon.thumbs-down:before {content: "\004e";}
 .icon.help:before {content: "\0050";}
 .icon.warning:before {content: "\0052";}
 .icon.info:before {content: "\0053";}
 .icon.cancel:before {content: "\0054";}
-.icon.checkmark:before {content: "\0051";}
+.icon.check:before {content: "\0051";}
 .icon.multiply:before, .icon.close:before  {content: "\0055";}
 .icon.plus:before {content: "\0056";}
 .icon.minus:before {content: "\0057";}
@@ -69,6 +69,6 @@
 .icon.accessibility:before {content: "\0040";}
 .icon.pencil:before {content: "\0022";}
 .icon.file:before {content: "\005d";}
-.icon.locked:before {content: "\0046";}
+.icon.lock:before {content: "\0046";}
 .icon.map:before {content: "\0029";}
 .icon.eye:before {content: "\005e";}
