--- a/src/stylesheets/css/Lungo.widgets.button.css
+++ b/src/stylesheets/css/Lungo.widgets.button.css
@@ -1,5 +1,64 @@
-a.button{display:inline-block;height:40px;padding:0 8px;color:#fff !important;background:#5a5a5a;font-size:14px;text-align:center;text-decoration:none;line-height:40px;outline:none;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;}a.button:active,a.button.active{background:#4b4b4b;}
-a.button:disabled,a.button.disabled{background:rgba(255, 255, 255, 0.2);color:#999 !important;}
-a.button .icon{position:relative;top:3px;height:18px;width:18px;font-size:18px;line-height:18px;margin-right:4px;}
-a.button img{top:0px !important;}
-a.button.big{width:100%;padding:0px;margin-bottom:4px;}a.button.big .icon{margin:8px -18px 0 12px;float:left;}
+/**
+ * Stylesheet
+ *
+ * @namespace Lungo.Widgets
+ * @class Button
+ *
+ * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
+ */
+/* DIMENSIONS */
+/* COLORS */
+a.button {
+  display: inline-block;
+  height: 40px;
+  padding: 0 8px;
+  color: #fff !important;
+  background: #5a5a5a;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 40px;
+  outline: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+a.button:active,
+a.button.active {
+  background: #4b4b4b;
+}
+a.button:disabled,
+a.button.disabled {
+  background: rgba(255, 255, 255, 0.2);
+  color: #999 !important;
+}
+a.button .icon {
+  position: relative;
+  top: 3px;
+  height: 18px;
+  width: 18px;
+  font-size: 18px;
+  line-height: 18px;
+  margin-right: 4px;
+}
+a.button img {
+  top: 0px !important;
+}
+a.button.big {
+  width: 100%;
+  padding: 0px;
+  margin-bottom: 4px;
+}
+a.button.big .icon {
+  margin: 8px -18px 0 12px;
+  float: left;
+}
