Fixed style for .bubble elements in nav.groupbar

--- a/src/stylesheets/Lungo.layout.nav.less
+++ b/src/stylesheets/Lungo.layout.nav.less
@@ -62,6 +62,10 @@ nav {
             & .icon {
                 font-size: 1.0em;
             }
+            & .bubble {
+                top: -6px;
+                left: 0px;
+            }
         }
     }
 }
